{
    "name": "Mouse",
    "maps": [
        {
            "name": "Mouse",
            "id": "14da60c5-4b1c-40ff-b089-619b19a448e4",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "9506fa72-fd2d-46d7-b5ad-3e2b1de0843c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5dd171d1-2980-4d30-9e03-5c24ccfefe0c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "InteractClick",
                    "type": "Button",
                    "id": "048348cf-4b8b-4bfb-8d1b-91b40ec0b178",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d8c16360-7c0a-40e3-b54c-36decbb88ce9",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3e8a777e-5b4c-47b9-b595-8935e53c9d9b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "feb41d8d-4ca1-45e0-b7ac-5d677abe68d3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}